--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,14 +1,65 @@
 // custom SCSS (or CSS) goes here
 
-// 覆盖正文字体
-$body-font-family: 
-  // 英文在前，中文在后
-  system-ui, -apple-system, BlinkMacSystemFont, 
-  "Segoe UI", Roboto, "Helvetica Neue", Arial,
-  "Microsoft Yahei", "PingFang SC", "Hiragino Sans GB", 
-  "WenQuanYi Micro Hei", sans-serif;
+// Typography
+// stylelint-disable selector-no-type, selector-max-type, selector-max-specificity, selector-max-id
 
-// 中文字体通常需要更大行高
-$body-line-height: 1.6;     // 原值 1.4
-$content-line-height: 1.8;  // 原值 1.6
+h1,
+.text-alpha {
+  font-weight: 500;
 
+  @include fs-7;
+}
+
+h2,
+.text-beta,
+#toctitle {
+  @include fs-6;
+}
+
+h3,
+.text-gamma {
+  @include fs-5;
+}
+
+h4,
+.text-delta {
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+
+  @include fs-4;
+}
+
+h4 code {
+  text-transform: none;
+}
+
+h5,
+.text-epsilon {
+  @include fs-3;
+}
+
+h6,
+.text-zeta {
+  @include fs-2;
+}
+
+.text-small {
+  @include fs-2;
+}
+
+.text-mono {
+  font-family: $mono-font-family !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.text-right {
+  text-align: right !important;
+}
