--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,1 +1,31 @@
 // custom SCSS (or CSS) goes here
+
+// custom font size and font weight
+h1,
+.text-alpha {
+  font-weight: 500;
+
+  @include fs-7;
+}
+
+h2,
+.text-beta,
+#toctitle {
+  font-weight: 500;
+
+  @include fs-6;
+}
+
+h3,
+.text-gamma {
+  font-weight: 400;
+
+  @include fs-5;
+}
+
+h4,
+.text-delta {
+  font-weight: 300;
+
+  @include fs-5;
+}
