--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,7 +3,7 @@
 // custom font size and font weight
 h1,
 .text-alpha {
-  font-weight: 500;
+  font-weight: 700;
 
   @include fs-7;
 }
@@ -11,21 +11,28 @@ h1,
 h2,
 .text-beta,
 #toctitle {
-  font-weight: 500;
+  font-weight: 700;
 
   @include fs-6;
 }
 
 h3,
 .text-gamma {
-  font-weight: 400;
+  font-weight: 600;
 
   @include fs-5;
 }
 
 h4,
 .text-delta {
-  font-weight: 300;
+  font-weight: 500;
 
   @include fs-5;
+}
+
+h5,
+.text-epsilon {
+  font-weight: 500;
+  
+  @include fs-4;
 }
