--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,6 +4,9 @@
 h1,
 .text-alpha {
   font-weight: 700;
+  border-bottom: 1px solid $border-color; // 使用主题的默认边框颜色
+  padding-bottom: 0.3em; // 控制分割线与文字间距
+  margin-bottom: 1em; // 控制分割线与下方内容的间距
 
   @include fs-7;
 }
@@ -12,6 +15,9 @@ h2,
 .text-beta,
 #toctitle {
   font-weight: 700;
+  border-bottom: 1px solid $border-color; 
+  padding-bottom: 0.2em;
+  margin-bottom: 0.8em;
 
   @include fs-6;
 }
